src/objects/LeanData__LeadFilterRule__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>LeanData__Field_Name__c</fullName>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__NodeID__c</fullName>
        <label>NodeID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Rule_Number__c</fullName>
        <label>RuleNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Sub_Rule_Number__c</fullName>
        <label>SubRuleNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LeadFilterRule</label>
</CustomObject>